refactor based on StudyService