@@ -1,5 +1,17 @@
 package com.fao.flashcards.domain.service;
 
+import java.util.Collections;
+import java.util.List;
+import java.util.NoSuchElementException;
+import java.util.Optional;
+import java.util.stream.Collectors;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
 import com.fao.flashcards.api.dto.StudyCardDTO;
 import com.fao.flashcards.api.dto.StudyDeckDTO;
 import com.fao.flashcards.domain.model.Card;
@@ -8,17 +20,6 @@ import com.fao.flashcards.domain.model.DeckCard;
 import com.fao.flashcards.domain.repository.CardRepository;
 import com.fao.flashcards.domain.repository.DeckCardRepository;
 import com.fao.flashcards.domain.repository.DeckRepository;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 /**
  * Implementierung des StudyService-Interfaces.
@@ -42,23 +43,29 @@ public class StudyServiceImpl implements StudyService {
     
     @Override
     @Transactional(readOnly = true)
-    public StudyDeckDTO getRandomizedDeck(String deckId) {
+    public Optional<StudyDeckDTO> getRandomizedDeck(String deckId) {
         assert deckId != null : "Deck ID darf nicht null sein";
-        assert !deckId.trim().isEmpty() : "Deck ID darf nicht leer sein";
+        assert !deckId.isBlank() : "Deck ID darf nicht leer sein";
         
         logger.info("Hole Karten für Deck {} in zufälliger Reihenfolge", deckId);
         
         // Deck aus der Datenbank laden
-        Deck deck = deckRepository.findById(deckId)
-                .orElseThrow(() -> new NoSuchElementException("Deck mit ID " + deckId + " wurde nicht gefunden"));
+        Optional<Deck> deckOptional = deckRepository.findById(deckId);
+        if (deckOptional.isEmpty()) {
+            logger.warn("Deck mit ID {} wurde nicht gefunden", deckId);
+            return Optional.empty();
+        }
+        
+        Deck deck = deckOptional.get();
         
         // Verknüpfungen zwischen Deck und Karten laden
         List<DeckCard> deckCards = deckCardRepository.findByDeckId(deckId);
         
-        // Karten laden
+        // Karten laden (ignoriere Karten, die nicht gefunden werden können)
         List<Card> cards = deckCards.stream()
-                .map(dc -> cardRepository.findById(dc.getCardId())
-                        .orElseThrow(() -> new NoSuchElementException("Karte mit ID " + dc.getCardId() + " wurde nicht gefunden")))
+                .map(dc -> cardRepository.findById(dc.getCardId()))
+                .filter(Optional::isPresent)
+                .map(Optional::get)
                 .collect(Collectors.toList());
         
         // Karten mischen
@@ -79,7 +86,7 @@ public class StudyServiceImpl implements StudyService {
         
         logger.info("Deck {} mit {} Karten in zufälliger Reihenfolge zurückgegeben", deckId, studyCardDTOs.size());
         
-        return studyDeckDTO;
+        return Optional.of(studyDeckDTO);
     }
     
     @Override
